--- a/.github/workflows/s3-sync.yml
+++ b/.github/workflows/s3-sync.yml
@@ -28,6 +28,7 @@ jobs:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACESS_KEY: $ {{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DIR: 'tcotts'
     
         
 
