--- a/.github/workflows/s3-sync.yml
+++ b/.github/workflows/s3-sync.yml
@@ -29,3 +29,8 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DIR: 'tcotts'
+        PINECONE_API_KEY: ${{secrets.PINECONE_API_KEY }}
+        PINECONE_INDEX: ${{ secrets.PINECONE_INDEX }}
+        PINECONE_NAMESPACE: ${{ secrets.PINECONE_NAMESPACE }}
+        COHERE_API_KEY: ${{ secrets.COHERE_API_KEY }}
+        
