--- a/.github/workflows/s3-pinecone-sync.yml
+++ b/.github/workflows/s3-pinecone-sync.yml
@@ -1,28 +1,19 @@
-# This is a basic workflow to help you get started with Actions
+name: s3 & pinecone sync
 
-name: S3 sync
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - name: checkout
       uses: actions/checkout@v4
 
-    - name: custom local action
+    - name: gptcotts-action
       uses: tomcotter7/gptcotts-github-action@main
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
