--- a/.github/workflows/s3-pinecone-sync.yml
+++ b/.github/workflows/s3-pinecone-sync.yml
@@ -12,6 +12,10 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v4
+    - id: files
+      uses: jitterbit/get-changed-files@v1
+      with:
+        format: 'space-delimited'
 
     - name: gptcotts-action
       uses: tomcotter7/gptcotts-github-action@main
@@ -24,4 +28,5 @@ jobs:
         PINECONE_INDEX: ${{ secrets.PINECONE_INDEX }}
         PINECONE_NAMESPACE: ${{ secrets.PINECONE_NAMESPACE }}
         COHERE_API_KEY: ${{ secrets.COHERE_API_KEY }}
+        CHANGED_FILES: ${{ steps.files.outputs.all }}
         
