set back to main

--- a/.github/workflows/s3-pinecone-sync.yml
+++ b/.github/workflows/s3-pinecone-sync.yml
@@ -23,7 +23,7 @@ jobs:
       
     - name: gptcotts-action
       if: steps.changed-markdown-files.outputs.any_changed == 'true'
-      uses: tomcotter7/gptcotts-github-action@latest
+      uses: tomcotter7/gptcotts-github-action@main
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
