changing to modified files

--- a/.github/workflows/s3-pinecone-sync.yml
+++ b/.github/workflows/s3-pinecone-sync.yml
@@ -33,5 +33,5 @@ jobs:
         PINECONE_INDEX: ${{ secrets.PINECONE_INDEX }}
         PINECONE_NAMESPACE: ${{ secrets.PINECONE_NAMESPACE }}
         COHERE_API_KEY: ${{ secrets.COHERE_API_KEY }}
-        CHANGED_FILES: ${{ steps.changed-markdown-files.outputs.all_changed_files }}
+        CHANGED_FILES: ${{ steps.changed-markdown-files.outputs.all_modified_files }}
         
