--- a/.github/workflows/s3-pinecone-sync.yml
+++ b/.github/workflows/s3-pinecone-sync.yml
@@ -28,7 +28,7 @@ jobs:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DIR: 'tcotts'
+        AWS_DIR: 'thomascotter00@gmail.com'
         PINECONE_API_KEY: ${{secrets.PINECONE_API_KEY }}
         PINECONE_INDEX: ${{ secrets.PINECONE_INDEX }}
         PINECONE_NAMESPACE: ${{ secrets.PINECONE_NAMESPACE }}
